--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "3.2.0"
   },
   "dependencies": {
+    "json-server": "^0.15.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -p 8080 db/db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
