--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "json-server --static ./build db.json",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p 8080 db/db.json"
+    "server": "json-server -p 8080 db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
