--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage" : "https://github.com/stefcot/redux-react-app",
   "browserslist": {
     "production": [
       ">0.2%",
